refactor: changes of CORS and DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=jobhub-api
 server.servlet.context-path=/api/v1
 
 # Configuracion de la base de datos
-# spring.datasource.url=jdbc:postgresql://localhost:5432/jobhub-db
-
-spring.datasource.url=jdbc:postgresql://dpg-cs3gul08fa8c73dbv890-a.oregon-postgres.render.com:5432/jobhubdb_0vpb
-
+#spring.datasource.url=jdbc:postgresql://localhost:5432/jobhub-db
+#spring.datasource.url=jdbc:postgresql://dpg-cs3gul08fa8c73dbv890-a.oregon-postgres.render.com:5432/jobhubdb_0vpb
+spring.datasource.url=jdbc:postgresql://dpg-csa8em23esus739q9u2g-a.virginia-postgres.render.com/jobhub_db_v1_2iim
+# Ale = postgres - Render= jobhub
 spring.datasource.username=jobhub
-# Ale = 12345678 - Jim = adminadmin
-spring.datasource.password=n6JFKkVG2kSrLOYdIYJNms5h8kD4aQS7
+# Ale = 12345678 - Jim = adminadmin - Jobhub = n6JFKkVG2kSrLOYdIYJNms5h8kD4aQS7
+spring.datasource.password=bCLpvmJFLtFx44b3By5kHGgMZhcx3yoc
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Propiedades de JPA/Hibernate
@@ -17,7 +17,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data-test.sql
 
 jobhub.openapi.dev-url = http://localhost:8080/api/v1
